[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/MADE TOMMY Regular_PERSONAL USE.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/setting.gd" type="Script" id=2]
[ext_resource path="res://scenes/header.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.129412, 0.0666667, 0.890196, 1 )

[node name="Setting" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = -1.0
margin_right = 1001.0
margin_bottom = 599.0

[node name="Header" parent="Background" instance=ExtResource( 3 )]

[node name="Option1" type="Button" parent="Background"]
margin_left = 400.0
margin_top = 165.0
margin_right = 600.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "1 week"

[node name="Option2" type="Button" parent="Background"]
margin_left = 402.0
margin_top = 258.0
margin_right = 602.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "2 weeks"

[node name="Option3" type="Button" parent="Background"]
margin_left = 401.0
margin_top = 350.0
margin_right = 601.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "3 weeks"

[connection signal="button_down" from="Background/Option1" to="." method="_on_Option1_button_down"]
[connection signal="button_down" from="Background/Option2" to="." method="_on_Option2_button_down"]
[connection signal="button_down" from="Background/Option3" to="." method="_on_Option3_button_down"]
